[Finish] add favorites button

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,8 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <%= render 'layouts/favorites', book: book %>
+        <td></td>
       </tr>
     <% end %>
   </tbody>
