[Finish] add comment

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,7 +18,7 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <%= render 'layouts/favorites', book: book %>
-        <td></td>
+        <td>コメント数: <%= book.book_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
