--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,21 +10,43 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-  		    <td><%= link_to user_path(@book.user) do %>
-            <%= attachment_image_tag(@book.user, :profile_image, size: "100x100", fallback: "no-image-icon.jpg") %><br>
-            <%= @book.user.name %>
+  		    <td>
+  		      <%= link_to user_path(@book.user) do %>
+              <%= attachment_image_tag(@book.user, :profile_image, size: "100x100", fallback: "no-image-icon.jpg") %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
           <%= render 'layouts/favorites', book: @book %>
-          <td></td>
+          <td>コメント数: <%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <div class="comment-show">
+        <% @book.book_comments.each do |book_comment| %>
+          <div class="d-flex align-items-center">
+            <%= link_to user_path(book_comment.user) do %>
+              <%= attachment_image_tag(book_comment.user, :profile_image, size: "100x100", fallback: "no-image-icon.jpg") %><br>
+              <%= book_comment.user.name %>
+            <% end %>
+            <p><%= book_comment.comment %></p>
+            <% if book_comment.user == current_user %>
+              <p><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: 'btn btn-sm btn-danger ml-3' %></p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+      <div class="comment-form">
+        <%= form_with(model: [@book,@book_comment], local: true) do |f| %>
+
+          <%= f.text_area :comment, class: 'form-control' %>
+          <%= f.submit "送信", class: 'mt-2' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
