--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -3,6 +3,9 @@
     <tr>
       <th>image</th>
       <th>name</th>
+      <th></th>
+      <th></th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,6 +14,17 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, size: "50x50", fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.following.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <% if user == current_user %>
+          <td></td>
+        <% else %>
+          <% if current_user.following?(user) %>
+            <%= render 'unfollow', user: user %>
+          <% else %>
+            <%= render 'follow', user: user %>
+          <% end %>
+        <% end %>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
