--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(model: current_user.active_relationships.build) do |f| %>
-  <%= hidden_field_tag :followed_id, user.id %>
+  <%= hidden_field_tag :followed_id, @user.id %>
   <td><%= f.submit "フォローする", class: "follow-button" %></td>
 <% end %>
