--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,4 @@
 <%= form_with(model: current_user.active_relationships.find_by(followed_id: user.id), method: :delete) do |f| %>
+  <%= hidden_field_tag :followed_id, @user.id %>
   <td><%= f.submit "フォローを外す", class: "follow-button" %></td>
 <% end %>
