--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="follow">
-      <h2>Follow Users</h2>
-      <% if @users.present? %>
+      <h2><%= @title %></h2>
+      <% if @users.any? %>
         
       <% else %>
         <p>ユーザーはいません</p>
