--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -30,11 +30,11 @@
   <% if user == current_user %>
     <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
   <% else %>
-    <div id="follow_form">
+    <div class="follow_button">
       <% if current_user.following?(user) %>
-        <%= render 'unfollow', user: user %>
+        <%= render 'layouts/unfollow', user: user %>
       <% else %>
-        <%= render 'follow', user: user %>
+        <%= render 'layouts/follow', user: user %>
       <% end %>
     </div>
   <% end %>
