--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= j(render('users/unfollow')) %>");
-$("#followers").html('<%= user.followers.count %>');
+$("follow_button").html("<%= j(render('layouts/unfollow', user: @user)) %>");
+$("#followers").html('<%= @user.followers.count %>');
