--- a/app/views/relationships/destroy.js.erb
+++ b/app/views/relationships/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= j(render('users/follow'))%>");
-$("#followers").html('<%= user.followers.count %>');
+$("#follow_form").html("<%= j(render('layouts/follow'))%>");
+$("#followers").html('<%= @user.followers.count %>');
