--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -19,13 +19,11 @@
         <% if user == current_user %>
           <td></td>
         <% else %>
-        <div class="follow_button">
-          <% if current_user.following?(user) %>
-            <td><%= render 'layouts/unfollow', user: user %></td>
+          <% if current_user.following?(user) %> 
+            <td><%= link_to 'フォロー外す', relationship_path(user.id), method: :delete %></td>
           <% else %>
-            <td><%= render 'layouts/follow', user: user %></td>
+            <td><%= link_to 'フォローする', relationships_path(followed_id: user.id), method: :post %></td>
           <% end %>
-        </div>
         <% end %>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
