--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -30,13 +30,11 @@
   <% if user == current_user %>
     <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
   <% else %>
-    <div class="follow_button">
-      <% if current_user.following?(user) %>
-        <%= render 'layouts/unfollow', user: user %>
-      <% else %>
-        <%= render 'layouts/follow', user: user %>
-      <% end %>
-    </div>
+    <% if current_user.following?(user) %> 
+      <td><%= link_to 'フォロー外す', relationship_path(user.id), method: :delete, class: 'btn btn-info btn-sm' %></td>
+    <% else %>
+      <td><%= link_to 'フォローする', relationships_path(followed_id: user.id), method: :post, class: 'btn btn-success btn-sm' %></td>
+    <% end %>
   <% end %>
 </div>
 
