--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,9 +1,30 @@
 <div class="container">
   <div class="row">
-    <div class="follow">
+    <div class="follow col-12">
       <h2><%= @title %></h2>
       <% if @users.any? %>
-        
+        <table class="table">
+          <thead>
+            <tr>
+              <th>image</th>
+              <th>name</th>
+              <th></th>
+              <th></th>
+              <th colspan="2"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @users.each do |user| %>
+              <tr>
+                <td><%= attachment_image_tag(user, :profile_image, size: "50x50", fallback: "no-image-icon.jpg") %></td>
+                <td>user.name</td>
+                <td>フォロー数: <%= user.following.count %></td>
+                <td>フォロワー数: <%= user.followers.count %></td>
+                <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
       <% else %>
         <p>ユーザーはいません</p>
       <% end %>
