--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,4 +22,14 @@
       </div>
     </div>
   </nav>
+  <% if user_signed_in? %>
+    <div class="search-form text-center mt-3">
+      <%= form_with url: search_path, method: :get, local: true do |f| %>
+        <%= f.text_field :search_content %>
+        <%= f.select :search_model, [['User', 'User'],['Book', 'Book']] %>
+        <%= f.select :search_how, [['完全一致', 'match'], ['前方一致', 'forward'], ['後方一致', 'backward'], ['部分一致', 'partical']] %>
+        <%= f.submit "検索" %>
+      <% end %>
+    </div>
+  <% end %>
 </header>
