--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,9 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <%= render 'layouts/favorites', book: @book %>
+          <td id="favorite-btn">
+            <%= render 'favorites/favorite-btn', book: @book %>
+          </td>
           <td>コメント数: <%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
