--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,24 +21,18 @@
           <td id="favorite-btn">
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
-          <td>コメント数: <%= @book.book_comments.count %></td>
+          <td id="comment-count">コメント数: <%= @book.book_comments.count %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
-      <div class="comment-show">
-        <% @book.book_comments.each do |book_comment| %>
-          <%= render 'comments/comment', book_comment: book_comment %>
-        <% end %>
+      <div id="comment-show">
+        <%= render 'book_comments/comment', book: @book %>
       </div>
-      <div class="comment-form">
-        <%= form_with(model: [@book,@book_comment], local: true) do |f| %>
-
-          <%= f.text_area :comment, class: 'form-control' %>
-          <%= f.submit "送信", class: 'mt-2' %>
-        <% end %>
+      <div id="comment-form">
+        <%= render 'book_comments/comment-form', book: @book, book_comment: @book_comment %>
       </div>
     </div>
   </div>
