--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,22 @@
           <%= f.email_field :email, autofocus: true, class: "email" %>
         </div>
         <div class="field">
+          <%= f.label :postcode, "Postal code" %><br />
+          <%= f.text_field :postcode, autofocus: true, class: "postcode" %>
+        </div>
+        <div class="field">
+          <%= f.label :prefecture_code %><br />
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, class: "prefecture_code" %>
+        </div>
+        <div class="field">
+          <%= f.label :address_city, "City" %><br />
+          <%= f.text_field :address_city, autofocus: true, class: "address_city" %>
+        </div>
+        <div class="field">
+          <%= f.label :address_street, "Street" %><br />
+          <%= f.text_field :address_street, autofocus: true, class: "address_street" %>
+        </div>
+        <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
