--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -2,17 +2,30 @@
   <div class="row">
     <div class="chat-page col-10 offset-1">
       <h2><%= @user.name %>さんとのチャット</h2>
-      <div id="chat-history">
-        
-      </div>
-      <div id="chat-form">
-        <%= form_with(model: [@user, @chat],url: user_chat_path, method: :get) do |f| %>
-          <%= f.text_field :message %>
+      <div class="chat-content">
+        <% @chats.each do |chat| %>
+          <% unless chat.user_id == current_user.id %>
+            <li style="text-align: left; list-style: none;">
+              <p><%= chat.message %></p>
+            </li>
+          <% end %>
         <% end %>
       </div>
-      <div id="chat-content">
-        
+      <div id="chat-form">
+        <%= form_with model: @chat do |f| %>
+          <%= f.text_field :message %>
+          <%= f.hidden_field :room_id %>
+        <% end %>
+      </div>
+      <div class="chat-content">
+        <% @chats.each do |chat| %>
+          <% if chat.user_id == current_user.id %>
+            <%= render 'chat-content', chat: chat %>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
 </div>
+
+
