--- a/app/views/chat/create.js.erb
+++ b/app/views/chat/create.js.erb
@@ -1,2 +1,2 @@
-$('.chat-content').append("<%= j(render 'chat/chat-content', chat: @chat) %>");
-$('#chat-form').val('');
+$('#chat-content-me').append("<%= j(render 'chat/chat-content', chat: @chat) %>");
+$('#chat_message').val('');
