--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="chat-page col-10 offset-1">
       <h2><%= @user.name %>さんとのチャット</h2>
-      <div class="chat-content">
+      <div class="chat-content-opponent">
         <% @chats.each do |chat| %>
           <% unless chat.user_id == current_user.id %>
             <li style="text-align: left; list-style: none;">
@@ -17,7 +17,7 @@
           <%= f.hidden_field :room_id %>
         <% end %>
       </div>
-      <div class="chat-content">
+      <div id="chat-content-me">
         <% @chats.each do |chat| %>
           <% if chat.user_id == current_user.id %>
             <%= render 'chat-content', chat: chat %>
